--- a/src/email_templates/html.handlebars
+++ b/src/email_templates/html.handlebars
@@ -1324,7 +1324,7 @@
                                                                                                                                 </tbody>
                                                                                                                             </table>
                                                                                                                         </div>
-                                                                                                                        <div
+                                                                                                                        {{!-- <div
                                                                                                                             class="rnb-social-center">
                                                                                                                             <table
                                                                                                                                 align="left"
@@ -1349,7 +1349,7 @@
                                                                                                                                     </tr>
                                                                                                                                 </tbody>
                                                                                                                             </table>
-                                                                                                                        </div>
+                                                                                                                        </div> --}}
                                                                                                                     </td>
                                                                                                                 </tr>
                                                                                                             </tbody>
